# jsc-android

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-all.sh  build-icu-data.sh  import-webkit.sh  make_compile_commands.sh  package-lock.json  package.json
android/: build.gradle  settings.gradle
android-library/: settings.gradle
android-library/android-jsc/: build.gradle
android-library/android-jsc/src/main/: AndroidManifest.xml
android/android-jsc/: build.gradle
icu/source/: CMakeLists.txt
icu/source/common/: CMakeLists.txt
icu/source/i18n/: CMakeLists.txt
icu/source/stubdata/: CMakeLists.txt
webkit/: CMakeLists.txt
webkit/Documentation/jsc-glib-4.0/html/: JSCClass.html  JSCContext.html  JSCException.html  JSCValue.html  JSCVirtualMachine.html  JSCWeakValue.html  annotation-glossary.html  ch01.html  index-all.html  index.html  jsc-glib-4.0-JSCOptions.html  jsc-glib-4.0-JSCVersion.html
webkit/Documentation/webkit2gtk-4.0/html/: WebKitApplicationInfo.html  WebKitAuthenticationRequest.html  WebKitAutomationSession.html  WebKitBackForwardList.html  WebKitBackForwardListItem.html  WebKitColorChooserRequest.html  WebKitConsoleMessage.html  WebKitContextMenu.html  WebKitContextMenuItem.html  WebKitCookieManager.html  WebKitDeviceInfoPermissionRequest.html  WebKitDownload.html  WebKitEditorState.html  WebKitFaviconDatabase.html  WebKitFileChooserRequest.html  WebKitFindController.html  WebKitFormSubmissionRequest.html  WebKitFrame.html  WebKitGeolocationPermissionRequest.html  WebKitHitTestResult.html  WebKitInputMethodContext.html  WebKitInstallMissingMediaPluginsPermissionRequest.html  WebKitMediaKeySystemPermissionRequest.html  WebKitNavigationAction.html  WebKitNavigationPolicyDecision.html  WebKitNetworkProxySettings.html  WebKitNotificationPermissionRequest.html  WebKitOptionMenu.html  WebKitOptionMenuItem.html  WebKitPermissionRequest.html  WebKitPlugin.html  WebKitPointerLockPermissionRequest.html  WebKitPolicyDecision.html  WebKitPrintOperation.html  WebKitResponsePolicyDecision.html  WebKitScriptWorld.html  WebKitSecurityManager.html  WebKitSecurityOrigin.html  WebKitSettings.html  WebKitURIRequest.html  (+33 more)
webkit/Documentation/webkitdomgtk-4.0/html/: WebKitDOMAttr.html  WebKitDOMBlob.html  WebKitDOMCDATASection.html  WebKitDOMCSSRule.html  WebKitDOMCSSRuleList.html  WebKitDOMCSSStyleDeclaration.html  WebKitDOMCSSStyleSheet.html  WebKitDOMCSSValue.html  WebKitDOMCharacterData.html  WebKitDOMComment.html  WebKitDOMDOMImplementation.html  WebKitDOMDOMSelection.html  WebKitDOMDOMTokenList.html  WebKitDOMDOMWindow.html  WebKitDOMDocument.html  WebKitDOMDocumentFragment.html  WebKitDOMDocumentType.html  WebKitDOMElement.html  WebKitDOMEvent.html  WebKitDOMFile.html  WebKitDOMFileList.html  WebKitDOMHTMLAnchorElement.html  WebKitDOMHTMLAppletElement.html  WebKitDOMHTMLAreaElement.html  WebKitDOMHTMLBRElement.html  WebKitDOMHTMLBaseElement.html  WebKitDOMHTMLBodyElement.html  WebKitDOMHTMLButtonElement.html  WebKitDOMHTMLCanvasElement.html  WebKitDOMHTMLCollection.html  WebKitDOMHTMLDListElement.html  WebKitDOMHTMLDirectoryElement.html  WebKitDOMHTMLDivElement.html  WebKitDOMHTMLDocument.html  WebKitDOMHTMLElement.html  WebKitDOMHTMLEmbedElement.html  WebKitDOMHTMLFieldSetElement.html  WebKitDOMHTMLFontElement.html  WebKitDOMHTMLFormElement.html  WebKitDOMHTMLFrameElement.html  (+65 more)
webkit/Source/JavaScriptCore/: CMakeLists.txt  PlatformJSCOnly.cmake
webkit/Source/cmake/: OptionsJSCOnly.cmake  WebKitFS.cmake  WebKitFeatures.cmake  WebKitMacros.cmake
(+9 files in other folders)
